; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_hevc.c_ff_hevc_annexb2mp4_buf.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_hevc.c_ff_hevc_annexb2mp4_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_hevc_annexb2mp4_buf(i32* %0, i32** %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32** %1, i32*** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %14 = call i32 @avio_open_dyn_buf(i32** %12)
  store i32 %14, i32* %13, align 4
  %15 = load i32, i32* %13, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %5
  %18 = load i32, i32* %13, align 4
  store i32 %18, i32* %6, align 4
  br label %32

19:                                               ; preds = %5
  %20 = load i32*, i32** %12, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %10, align 4
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @ff_hevc_annexb2mp4(i32* %20, i32* %21, i32 %23, i32 %24, i32* %25)
  store i32 %26, i32* %13, align 4
  %27 = load i32*, i32** %12, align 8
  %28 = load i32**, i32*** %8, align 8
  %29 = call i32 @avio_close_dyn_buf(i32* %27, i32** %28)
  %30 = load i32*, i32** %9, align 8
  store i32 %29, i32* %30, align 4
  %31 = load i32, i32* %13, align 4
  store i32 %31, i32* %6, align 4
  br label %32

32:                                               ; preds = %19, %17
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i32 @avio_open_dyn_buf(i32**) #1

declare dso_local i32 @ff_hevc_annexb2mp4(i32*, i32*, i32, i32, i32*) #1

declare dso_local i32 @avio_close_dyn_buf(i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
